# cppon

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  c++on.sln
CppOnGoogleTest/: CppOnGoogleTest.vcxproj  cppon_more_tests.cpp  cppon_parse_tests.cpp  cppon_udl_test.cpp  test.cpp
GenerateUberHeader/: scripts.pyproj
c++on/: c++on.cpp  c++on.vcxproj  c++on.vcxproj.filters
docs/: ABOUT.md  ACKNOWLEDGEMENT.md  API_REFERENCE.md  BASIC_USAGE.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTACT.md  DOCUMENT.md  EXCEPTIONS.md  FAQ.md  GLOSSARY.md  INDEX.md  INTRODUCTION.md  LITERALS.md  PATHS.md  PERFORMANCE.md  ROADMAP.md  SIMD_SUPPORT.md
docs/internals/: ALTERNATIVES.md  INDEX.md  PARSER.md  PRINTER.md  REFERENCES.md  SCANNER.md  TYPES.md  VISITORS.md
examples/: CMakeLists.txt  basic_usage.cpp  binary_blobs.cpp  features_snippets.cpp  formatting_options.cpp  literals_usage.cpp  paths_example.cpp  references_example.cpp
include/cppon/: c++on-alternatives.h  c++on-config.h  c++on-document.h  c++on-exceptions.h  c++on-literals.h  c++on-parser.h  c++on-parser_error.h  c++on-printer-state.h  c++on-printer.h  c++on-references.h  c++on-roots.h  c++on-scanner.h  c++on-swar.h  c++on-thread.h  c++on-types.h  c++on-visitors.h  c++on.h
include/platform/: processor_features_info.h
include/simd/: simd_comparisons_error.h  simd_comparisons_hybrid.h
include/utils/: string_buffer.h
scripts/: generate_uber_header.py  generate_uber_header_old.py  run.bat  scripts.pyproj
single_include/cppon/: c++on.h
templates/: fragment.ignore  template.json
templates/headers/: c++on.tmpl
templates/headers/cppon/: c++on-alternatives.tmpl  c++on-config.tmpl  c++on-document.tmpl  c++on-exceptions.tmpl  c++on-literals.tmpl  c++on-parser.tmpl  c++on-printer-state.tmpl  c++on-printer.tmpl  c++on-references.tmpl  c++on-roots.tmpl  c++on-scanner.tmpl  c++on-swar.tmpl  c++on-thread.tmpl  c++on-types.tmpl  c++on-visitors.tmpl
templates/headers/platform/: processor_features_info.tmpl
templates/headers/simd/: simd_comparisons.tmpl
test_all_google/: test_all_google.vcxproj  test_all_google.vcxproj.filters
test_all_run/: test_all_run.vcxproj  test_all_run.vcxproj.filters
test_no_simd_smoke/: test_no_simd_smoke.vcxproj  test_no_simd_smoke.vcxproj.filters
tests/: CMakeLists.txt  main.cpp  pch.h  run_test.h  test_all_google.cpp  test_all_run.cpp  test_no_simd_smoke.cpp
